--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact</title>
+  <title>Contact | Réserver</title>
+  <meta name="description" content="Réservez une table à La Croix Blanche, restaurant situé dans le quartier Saint-Seurin à Bordeaux. Remplissez notre formulaire de contact en ligne et recevez une confirmation rapide. Profitez d'une expérience culinaire unique dans un cadre chaleureux.">
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
