--- a/footer.html
+++ b/footer.html
@@ -3,7 +3,7 @@
     <div class="coordonnees">
       <h6>La Croix Blanche</h6>
       <ul>
-        <li>05 56 30 97 89</li>
+        <li><a href="tel:0556309789">05 56 30 97 89</a></li>
         <li>62 rue de La Croix Blanche, <br>33000 BORDEAUX</li>
         <li>Du lundi au vendredi <br>12h00 - 14h00 et 19h00 - 22h00</li>
       </ul>
@@ -12,17 +12,17 @@
       <h6>Navigation</h6>
       <ul>
         <li><a href="index.html">Accueil</a></li>
-        <li><a href="la_carte.html"></a>La carte</li>
-        <li><a href="a_propos.html"></a>À Propos</li>
-        <li><a href="contact.html"></a>Contact</li>
+        <li><a href="la_carte.html">La Carte</a></li>
+        <li><a href="a_propos.html">À Propos</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
     <div class="reseaux-sociaux">
       <h6>Retrouvez-nous</h6>
       <ul>
-        <li class="instagram"><a href="" target="_blank"><img src="/images/icons/icon-instagram.svg" alt="Instagram"></a></li>
-        <li class="facebook"><a href="" target="_blank"><img src="/images/icons/icon-facebook-f.svg" alt="Facebook"></a></li>
-        <li class="tripadvisor"><a href="" target="_blank"><img src="/images/icons/icon-tripadvisor.svg" alt="TripAdvisor"></a></li>
+        <li class="instagram"><a href="https://www.instagram.com/croixblancherestaurant?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" title="croixblancherestaurant"><img src="/images/icons/icon-instagram.svg" alt="Profil Instagram croixblancherestaurant"></a></li>
+        <li class="facebook"><a href="https://www.facebook.com/profile.php?id=61560848293958" target="_blank" title="Croixblancherestaurant"><img src="/images/icons/icon-facebook.svg" alt="Profil Facebook Croixblancherestaurant"></a></li>
+        <li class="tripadvisor"><a href="https://www.tripadvisor.fr/Restaurant_Review-g187079-d28027220-Reviews-La_Croix_Blanche-Bordeaux_Gironde_Nouvelle_Aquitaine.html?m=19905" target="_blank" title="La Croix Blanche"><img src="/images/icons/icon-tripadvisor.svg" alt="Page TripAdvisor La Croix Blanche"></a></li>
       </ul>
     </div>
     <div class="mentions-legales">
