--- a/nav.html
+++ b/nav.html
@@ -9,7 +9,7 @@
       <li class="nav-la-carte"><a href="la_carte.html">La carte</a></li>
       <li class="nav-a-propos"><a href="a_propos.html">À propos</a></li>
       <li class="nav-contact"><a href="contact.html">Contact</a></li>
-      <li class="nav-telephone">05 56 30 97 89</li>
+      <li class="nav-telephone"><a href="tel:0556309789">05 56 30 97 89</a></li>
     </ul>
   </nav>
 </div>
