--- a/reservation.html
+++ b/reservation.html
@@ -5,10 +5,10 @@
   </div>
   <div class="reservation-container">
     <p>Vous pouvez nous joindre au :</p>
-    <p class="tel-contact">05 56 30 97 89</p>
+    <p class="tel-contact"><a href="tel:0556309789">05 56 30 97 89</a></p>
     <p>OU par e-mail :</p>
     <div class="cta fle-dir-col-cen-bot mtb-20">
-      <a href="" target="_blank" class="bg-blu">Demande de réservation <span class="red">*</span></a>
+      <a href="contact.html" class="bg-blu">Demande de réservation <span class="red">*</span></a>
     </div>
     <p class="reservation-mentions"><span class="red">*</span> Toutes les demandes soumises par e-mail devront être validées de notre part pour que votre réservation soit enregistrée.</p>
   </div>
