--- a/a_propos.html
+++ b/a_propos.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>À Propos</title>
+  <title>L'Équipe | Le Restaurant | Le Quartier | Nos Fournisseurs</title>
+  <meta name="description" content="Découvrez l'équipe passionnée de La Croix Blanche, le restaurant situé au cœur du quartier historique Saint-Seurin à Bordeaux. Apprenez-en plus sur nos engagements, nos fournisseurs locaux et l'histoire culinaire qui fait notre réputation.">
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
