--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Accueil</title>
+  <title>La Croix Blanche | Restaurant Tradionnel Français | BORDEAUX</title>
+  <meta name="description" content="Découvrez La Croix Blanche, restaurant à Bordeaux alliant tradition et modernité. Profitez d'une cuisine française raffinée, d'une ambiance bistrot chic et d'une sélection de vins issus des meilleurs terroirs. Un lieu convivial pour vos moments gourmands." />
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,7 +32,7 @@
           <h3>Tradition & Modernité</h3>
         </div>
         <div class="texte-intro">
-          <p>Situé entre les quartiers Saint-Seurin, Caudéran et Fondaudège à Bordeaux, notre restaurant vous invite à découvrir une ambiance bistro chic dans une salle conviviale ou sur notre terrasse ombragée. Venez profiter d'un cadre élégant et chaleureux pour partager un moment gourmand, sublimé par une sélection de vins français.</p>
+          <p>Situé entre les quartiers Saint-Seurin, Caudéran et Fondaudège à Bordeaux, notre restaurant vous invite à découvrir une ambiance bistrot chic dans une salle conviviale ou sur notre terrasse ombragée. Venez profiter d'un cadre élégant et chaleureux pour partager un moment gourmand, sublimé par une sélection de vins français.</p>
         </div>
       </div>
     </section>
@@ -69,11 +70,11 @@
           <div class="card-la-cave fle-dir-col-cen-bot">
             <h4>La Cave</h4>
             <h5>Vins issus de grands vignobles</h5>
-            <p>Pour sublimer votre expérience culinaire, nous proposons une sélection de vins soigneusement choisis. Vins rouges, blancs, rosés ou champagnes, chaque bouteille est sélectionnée pour accompagner à merveille nos plats raffinés, vous offrant ainsi un accord parfait entre mets et vins.</p>
+            <p>Pour sublimer votre expérience culinaire, nous proposons une sélection de vins rouges, blancs, rosés ou champagnes. Chaque bouteille est sélectionnée pour accompagner à merveille nos plats raffinés, vous offrant ainsi un accord parfait entre mets et vins.</p>
           </div>
         </div>
         <div class="cta">
-          <a href="" target="_blank" class="bg-yel">Consultez les cartes</a>
+          <a href="la_carte.html" class="bg-yel">Consultez les cartes</a>
         </div>
       </div>
     </section>
@@ -90,7 +91,7 @@
           </div>
         </div>
         <div class="cta">
-          <a href="" target="_blank" class="bg-whi">Lire la suite</a>
+          <a href="a_propos.html" class="bg-yel">Lire la suite</a>
         </div>
       </div>
     </section>
