--- a/la_carte.html
+++ b/la_carte.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>La Carte</title>
+  <title>Menu du midi | Carte des plats | Carte des Vins</title>
+  <meta name="description" content="Une carte gourmande avec des produits frais et de saison. Un menu pour le midi et des plats pour le soir : Dorade au citron confit, Entrecôte Black Angus, Pluma Ibérica, et plus. Cave à vins riche avec des crus du Sud-Ouest, de Bourgogne, de Loire et plus. Une expérience gastronomique unique à chaque visite.">
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
