--- a/a_propos.html
+++ b/a_propos.html
@@ -52,8 +52,7 @@
               <h3>La Croix Blanche</h3>
             </div>
             <div class="swiper-text">
-              <p>Situé au cœur de Bordeaux dans le quartier Saint-Seurin, La Croix Blanche est bien plus qu'un simple restaurant : c'est une expérience culinaire unique orchestrée par une équipe passionnée. La terrase calme et verdoyante côté jardin offre trois espaces. Une partie pergola ombragé, une terrase ensoleillé ainsi qu'un salon de jardin. Une jardinière composée d'herbes aromatiques sert au chef dans la composition de ses plats.
-              </p>
+              <p>Situé au cœur de Bordeaux au 62 rue de La Croix Blanche, dans le charmant quartier de Saint-Seurin, La Croix Blanche vous invite à découvrir bien plus qu'un simple restaurant : une véritable expérience culinaire où chaque détail compte. C'est un lieu convivial disposant d'une terrasse verdoyante et paisible, aménagée en trois espaces distincts. Vous y trouverez une pergola ombragée idéale pour les journées ensoleillées, une terrasse baignée de lumière et un confortable salon de jardin. À l’intérieur, une ambiance bistrot chic, élégante, sobre et chaleureuse. Le chef, passionné par les saveurs authentiques, puise directement dans la jardinière d'herbes aromatiques pour sublimer ses créations, vous offrant une cuisine fraîche et raffinée.</p>
             </div>
           </div>
           <div class="swiper-slide">
@@ -65,7 +64,7 @@
               <h3>Saint Seurin - La Croix Blanche</h3>
             </div>
             <div class="swiper-text">
-              <p>Le quartier de Saint-Seurin, l'un des plus anciens de Bordeaux, est riche en histoire et en patrimoine. Son origine remonte à l'époque gallo-romaine, et il tire son nom de la basilique Saint-Seurin, un joyau de l'art roman classé au patrimoine mondial de l'UNESCO. Ce quartier a longtemps été un lieu de pèlerinage important sur le chemin de Saint-Jacques-de-Compostelle. Avec ses ruelles pittoresques, ses élégantes demeures et ses nombreux espaces verts, Saint-Seurin conserve un charme authentique tout en étant au cœur de la vie culturelle et sociale de Bordeaux. La rue de la Croix Blanche à Bordeaux, située dans le quartier historique de Saint-Seurin, est réputée pour son charme résidentiel et ses maisons élégantes. Elle offre une atmosphère paisible avec des commerces de proximité et un accès facile aux sites culturels de la ville.</p>
+              <p>Le quartier de Saint-Seurin, l'un des plus anciens de Bordeaux, est riche en histoire et en patrimoine. Son origine remonte à l'époque gallo-romaine et il tire son nom de la basilique Saint-Seurin, un joyau de l'art roman classé au patrimoine mondial de l'UNESCO. Ce quartier a longtemps été un lieu de pèlerinage important sur le chemin de Saint-Jacques-de-Compostelle. Avec ses ruelles pittoresques, ses élégantes demeures et ses nombreux espaces verts, Saint-Seurin conserve un charme authentique tout en étant au cœur de la vie culturelle et sociale de Bordeaux. La rue de la Croix Blanche, située dans le quartier historique de Saint-Seurin, est réputée pour son charme résidentiel et ses maisons élégantes. Elle offre une atmosphère paisible avec des commerces de proximité et un accès facile aux sites culturels de la ville.</p>
             </div>
           </div>
         </div>
@@ -81,7 +80,7 @@
           <h3>Nos produits</h3>
         </div>
         <div class="texte-intro">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus dictum nulla eget dui tincidunt elementum. Donec porttitor eu odio vitae blandit. Nam eleifend turpis vel lacus maximus efficitur. Phasellus quis pulvinar ligula. Nam tellus urna, lobortis vel auctor ut, consequat ac tellus. Suspendisse consequat tristique justo tempor hendrerit. Nunc sollicitudin eros sed est lacinia posuere. Nam sed felis volutpat, hendrerit lectus cursus, posuere neque.</p>
+          <p>Nous mettons un point d'honneur à mettre en avant les producteurs avec qui nous travaillons, ils ont tous leur cadre photo dans la salle du restaurant. Travailler des produits locaux d'exception est pour nous très important, c'est pourquoi nous avons des choisi fournisseurs pleins de savoir faire et d'expérience, tous situés dans le Sud-Ouest.</p>
         </div>
       </div>
       <div class="slideshow-fournisseurs">
@@ -94,8 +93,7 @@
                 </div>
                 <div class="fournisseur-text">
                   <h4>Boucher</h4>
-                  <h5>Prénom Nom</h5>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus dictum nulla eget dui tincidunt elementum. Donec porttitor eu odio vitae blandit. Nam eleifend turpis vel lacus maximus efficitur. Phasellus quis pulvinar ligula.</p>
+                  <p>Etablissement Massonière situé à Saint-Denis-de-Pile près de Bordeaux, nous livre toute les semaine des viandes fraîches de bœuf, de veau, d'agneau et de mouton d'origine française.</p>
                 </div>
               </div>
             </div>
@@ -106,8 +104,7 @@
                 </div>
                 <div class="fournisseur-text">
                   <h4>Charcutière</h4>
-                  <h5>Prénom Nom</h5>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus dictum nulla eget dui tincidunt elementum. Donec porttitor eu odio vitae blandit. Nam eleifend turpis vel lacus maximus efficitur. Phasellus quis pulvinar ligula.</p>
+                  <p>Héléna de La Maison du Jambon au Pays Basque. Tradition et qualité de la charcuterie basque depuis 1968, mais aussi du porc des Pyrénées élevé en plein air, des ris de veau ou de chevreau.</p>
                 </div>
               </div>
             </div>
@@ -118,8 +115,7 @@
                 </div>
                 <div class="fournisseur-text">
                   <h4>Poissonnier</h4>
-                  <h5>Prénom Nom</h5>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus dictum nulla eget dui tincidunt elementum. Donec porttitor eu odio vitae blandit. Nam eleifend turpis vel lacus maximus efficitur. Phasellus quis pulvinar ligula.</p>
+                  <p>Benoit de chez Top Langouste, société créée en 1981 nous propose toute les semaines une large sélection de poissons, crustacés et mollusques frais et de saison.</p>
                 </div>
               </div>
             </div>
@@ -130,8 +126,7 @@
                 </div>
                 <div class="fournisseur-text">
                   <h4>Volailler</h4>
-                  <h5>Prénom Nom</h5>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus dictum nulla eget dui tincidunt elementum. Donec porttitor eu odio vitae blandit. Nam eleifend turpis vel lacus maximus efficitur. Phasellus quis pulvinar ligula.</p>
+                  <p>Jean-Luc de la Ferme Hournadet à Gamarde-Les-Bains dans les Landes. Tous leurs produits sont élaborés à partir de leurs propres volailles que nous nourries avec le maïs cultivé sur l'exploitation. Tous les produits sont issus de leur atelier de production, dans lequel les canards sont gavés à l'ancienne, au maïs grain entier.</p>
                 </div>
               </div>
             </div>
@@ -142,8 +137,7 @@
                 </div>
                 <div class="fournisseur-text">
                   <h4>Fromager</h4>
-                  <h5>Prénom Nom</h5>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus dictum nulla eget dui tincidunt elementum. Donec porttitor eu odio vitae blandit. Nam eleifend turpis vel lacus maximus efficitur. Phasellus quis pulvinar ligula.</p>
+                  <p>La Fromagerie de Pierre à Bordeaux. Notre ami Pierre Rollet-Gérard a sillonné la France pour découvrir les meilleurs éleveurs et producteurs de fromage de nos régions. Lui-même affineur, il nous propose des fromages de saisons sélectionnés avec soin.</p>
                 </div>
               </div>
             </div>
@@ -154,8 +148,7 @@
                 </div>
                 <div class="fournisseur-text">
                   <h4>Maraîchère</h4>
-                  <h5>Prénom Nom</h5>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus dictum nulla eget dui tincidunt elementum. Donec porttitor eu odio vitae blandit. Nam eleifend turpis vel lacus maximus efficitur. Phasellus quis pulvinar ligula.</p>
+                  <p>Nathalie de la Maison Trias crée en 1935 à Bordeaux nous accompagne toute l'année pour sélectionner les meilleurs fruits et légumes de saison pour composer nos plats.</p>
                 </div>
               </div>
             </div>
@@ -166,8 +159,7 @@
                 </div>
                 <div class="fournisseur-text">
                   <h4>Boulanger</h4>
-                  <h5>Prénom Nom</h5>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus dictum nulla eget dui tincidunt elementum. Donec porttitor eu odio vitae blandit. Nam eleifend turpis vel lacus maximus efficitur. Phasellus quis pulvinar ligula.</p>
+                  <p>Thomas de La Boulange à Lormont a créé son pain Le Barbey, farines et graines qui le composent sont tous issus de l'agriculture locale.</p>
                 </div>
               </div>
             </div>
