--- a/footer.html
+++ b/footer.html
@@ -26,7 +26,7 @@
       </ul>
     </div>
     <div class="mentions-legales">
-      <p>© 2024 La Croix Blanche | Mentions légales | Politique de confidentialité | Réalisé par : <span class="dev-nm"></span> nicolas-monmerque.com | Photos : victor</p>
+      <p>© 2024 La Croix Blanche | Mentions légales | Politique de confidentialité | Réalisé par : <span class="dev-nm"></span> nicolas-monmerque.com | Photos : Victor Lemée</p>
     </div>
   </div>
 </div>
