--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           </div>
         </div>
         <div class="cta">
-          <a href="la_carte.html" class="bg-yel">Consultez les cartes</a>
+          <a href="la_carte.html" class="bg-yel">Consulter les cartes</a>
         </div>
       </div>
     </section>
