Création des pages Mentions Légales & Politique de Confidentialité

--- a/footer.html
+++ b/footer.html
@@ -26,7 +26,7 @@
       </ul>
     </div>
     <div class="mentions-legales">
-      <p>© 2024 La Croix Blanche | Mentions légales | Politique de confidentialité | Réalisé par : <span class="dev-nm"></span> nicolas-monmerque.com | Photos : Victor Lemée</p>
+      <p>© 2024 La Croix Blanche | <a href="/mentions_legales.html">Mentions légales</a> | <a href="/politique_de_confidentialite.html">Politique de confidentialité</a> | Réalisé par : <a href="https://www.nicolas-monmerque.com/" target="_blank"><span class="dev-nm"></span> nicolas-monmerque.com</a> | Photos : Victor Lemée</p>
     </div>
   </div>
 </div>
