Mise à jour contenu

--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contact | Réserver</title>
   <meta name="description" content="Réservez une table à La Croix Blanche, restaurant situé dans le quartier Saint-Seurin à Bordeaux. Remplissez notre formulaire de contact en ligne et recevez une confirmation rapide. Profitez d'une expérience culinaire unique dans un cadre chaleureux.">
+  <link rel="icon" type="image/png" href="/images/icons/favicon-48x48.png" sizes="48x48" />
+  <link rel="icon" type="image/svg+xml" href="/images/icons/favicon.svg" />
+  <link rel="shortcut icon" href="/images/icons/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/images/icons/apple-touch-icon.png" />
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
