--- a/infos_pratiques.html
+++ b/infos_pratiques.html
@@ -7,9 +7,9 @@
     <div class="acces">
       <h4>Accès</h4>
       <ul>
-        <li class="adresse"><span class="semi-bold">Adresse :</span> 62 rue de la Croix Blanche, 33 000 BORDEAUX</li>
-        <li class="parking"><span class="semi-bold">Parking :</span> 22 Pl. des Martyrs de la Résistance, 33000 Bordeaux (9 min à pied)</li>
-        <li class="bus"><span class="semi-bold">Bus :</span> Ligne G - 2 - 82 - s57 (Arrêt : Croix Blanche ou Lycée Camille Julian)</li>
+        <li class="adresse"><span class="semi-bold">Adresse :</span> 62 rue de la Croix Blanche, 33 000 BORDEAUX.</li>
+        <li class="parking"><span class="semi-bold">Parking :</span> 22 Pl. des Martyrs de la Résistance, 33000 Bordeaux (9 min à pied).</li>
+        <li class="bus"><span class="semi-bold">Bus :</span> Ligne G - 2 - 82 - s57 (Arrêt : Croix Blanche ou Lycée Camille Julian).</li>
       </ul>
     </div>
     <div class="map-container">
@@ -20,14 +20,14 @@
       <div class="grid-2">
         <div class="semaine">
           <ul>
-            <li><span class="semi-bold">Du lundi au vendredi</span></li>
+            <li><span class="semi-bold">Du lundi au samedi</span></li>
             <li>Midi 12h00 - 14h00</li>
             <li>Soir 19h00 - 22h00</li>
           </ul>
         </div>
         <div class="week-end">
           <ul>
-            <li><span class="semi-bold">Le samedi et dimanche</span></li>
+            <li><span class="semi-bold">Le dimanche</span></li>
             <li>Fermé</li>
           </ul>
         </div>
@@ -35,11 +35,11 @@
     </div>
     <div class="services">
       <h4>Services</h4>
-      <p>Service en salle, en terrasse, chaise bébé, WC séparé, accès PMR, possibilité de plat vegan à la demande</p>
+      <p>Service en salle, en terrasse, chaise bébé, WC séparé, accès PMR, possibilité de plat vegan à la demande.</p>
     </div>
     <div class="paiement">
       <h4>Moyens de paiement</h4>
-      <p>Carte bancaire, paiement sans contact, paiement mobile, espèces, carte tickets restaurants</p>
+      <p>Carte bancaire, paiement sans contact, paiement mobile, espèces, carte tickets restaurants.</p>
     </div>
   </div>
 </div>
