--- a/a_propos.html
+++ b/a_propos.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>L'Équipe | Le Restaurant | Le Quartier | Nos Fournisseurs</title>
   <meta name="description" content="Découvrez l'équipe passionnée de La Croix Blanche, le restaurant situé au cœur du quartier historique Saint-Seurin à Bordeaux. Apprenez-en plus sur nos engagements, nos fournisseurs locaux et l'histoire culinaire qui fait notre réputation.">
+  <link rel="icon" type="image/png" href="/images/icons/favicon-48x48.png" sizes="48x48" />
+  <link rel="icon" type="image/svg+xml" href="/images/icons/favicon.svg" />
+  <link rel="shortcut icon" href="/images/icons/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/images/icons/apple-touch-icon.png" />
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
