--- a/la_carte.html
+++ b/la_carte.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Menu du midi | Carte des plats | Carte des Vins</title>
   <meta name="description" content="Une carte gourmande avec des produits frais et de saison. Un menu pour le midi et des plats pour le soir : Dorade au citron confit, Entrecôte Black Angus, Pluma Ibérica, et plus. Cave à vins riche avec des crus du Sud-Ouest, de Bourgogne, de Loire et plus. Une expérience gastronomique unique à chaque visite.">
+  <link rel="icon" type="image/png" href="/images/icons/favicon-48x48.png" sizes="48x48" />
+  <link rel="icon" type="image/svg+xml" href="/images/icons/favicon.svg" />
+  <link rel="shortcut icon" href="/images/icons/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/images/icons/apple-touch-icon.png" />
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
