--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
     <div id="navigation"></div>
     <div class="header-container-accueil">
       <div class="slogan">
-        <h2>Bienvenue à</h2>
-        <h1>La Croix Blanche</h1>
+        <h1><span class="slogan-titre">Bienvenue à </span><br>La Croix Blanche</h1>
         <p>Cuisine Tradionnelle Française</p>
         <div class="drapeau">
           <img src="/images/drapeau.svg" alt="Le drapeau français">
