--- a/index.html
+++ b/index.html
@@ -41,18 +41,18 @@
     </section>
     <div class="slider">
       <ul>
-        <li><img src="/images/slide-01.png" alt=""></li>
-        <li><img src="/images/slide-02.png" alt=""></li>
-        <li><img src="/images/slide-03.png" alt=""></li>
-        <li><img src="/images/slide-04.png" alt=""></li>
-        <li><img src="/images/slide-05.png" alt=""></li>
-        <li><img src="/images/slide-06.png" alt=""></li>
-        <li><img src="/images/slide-01.png" alt=""></li>
-        <li><img src="/images/slide-02.png" alt=""></li>
-        <li><img src="/images/slide-03.png" alt=""></li>
-        <li><img src="/images/slide-04.png" alt=""></li>
-        <li><img src="/images/slide-05.png" alt=""></li>
-        <li><img src="/images/slide-06.png" alt=""></li>
+        <li><img src="/images/slide-01.png" alt="Présentation d'une assiette fraîcheur"></li>
+        <li><img src="/images/slide-02.png" alt="Le Chef Momo"></li>
+        <li><img src="/images/slide-03.png" alt="La salle du restaurant"></li>
+        <li><img src="/images/slide-04.png" alt="Service en terrasse"></li>
+        <li><img src="/images/slide-05.png" alt="Assiette fraîcheur à table"></li>
+        <li><img src="/images/slide-06.png" alt="Préparation des apéritifs"></li>
+        <li><img src="/images/slide-01.png" alt="Présentation d'une assiette fraîcheur"></li>
+        <li><img src="/images/slide-02.png" alt="Le Chef Momo"></li>
+        <li><img src="/images/slide-03.png" alt="La salle du restaurant"></li>
+        <li><img src="/images/slide-04.png" alt="Service en terrasse"></li>
+        <li><img src="/images/slide-05.png" alt="Assiette fraîcheur à table"></li>
+        <li><img src="/images/slide-06.png" alt="Préparation des apéritifs"></li>
       </ul>
     </div>
     <section class="prestations">
