Robots / Tag Manager / Othographe

--- a/a_propos.html
+++ b/a_propos.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-TG9WXFLQ');</script>
+  <!-- End Google Tag Manager -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>L'Équipe | Le Restaurant | Le Quartier | Nos Fournisseurs</title>
@@ -17,6 +24,10 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
 </head>
 <body>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TG9WXFLQ"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
   <header class="head-degr-2">
     <div id="navigation"></div>
     <div class="header-container-a-propos">
@@ -26,7 +37,7 @@
           <h5>Découvrez notre histoire...</h6>
         </div>
         <div class="small-container texte-intro">
-          <p class="white">Faire connaissance avec notre équipe passionnée, en apprendre d'avantage sur La Croix Blanche et explorer le quartier historique qui nous entoure. En savoir plus sur nos engagements et sur les producteurs locaux avec qui nous collaborons pour vous offrir les meilleurs produits, en harmonie avec notre cuisine. Plongez dans les coulisses de notre aventure culinaire et partagez avec nous l'essence de notre savoir-faire.</p>
+          <p class="white">Faire connaissance avec notre équipe passionnée, en apprendre davantage sur La Croix Blanche et explorer le quartier historique qui nous entoure. En savoir plus sur nos engagements et sur les producteurs locaux avec qui nous collaborons pour vous offrir les meilleurs produits, en harmonie avec notre cuisine. Plongez dans les coulisses de notre aventure culinaire et partagez avec nous l'essence de notre savoir-faire.</p>
         </div>
       </div>
     </div>
@@ -44,7 +55,7 @@
               <h3>Qui Sommes-Nous ?</h3>
             </div>
             <div class="swiper-text">
-              <p>Chef Momo, avec ses 30 ans d'expérience dans des villes comme Paris, Genève, Arcachon a fini par poser ses valises à Bordeaux. Grâce aux différents établissement dans lesquels il a travaillé, il a pu découvrir différentes influences culinaires pour crée des plats à travers lesquels il célebre les saveurs locales. Après le premier restaurant à succès "Chai Maestro" situé dans le quartier de Mériadeck, le chef a continué sa route vers le quartier Saint-Seurin. Notre équipe de serveurs, menée par la dynamique Virgine, s'engage à offrir un service chaleureux et attentif, assurant que chaque visite soit mémorable. Ensemble, nous partageons une passion commune pour la gastronomie et l'accueil, faisant de La Croix Blanche une destination incontournable pour les gourmets et amateurs de bonne cuisine.</p>
+              <p>Chef Momo, avec ses 30 ans d'expérience dans des villes comme Paris, Genève, Arcachon a fini par poser ses valises à Bordeaux. Grâce aux différents établissements dans lesquels il a travaillé, il a pu découvrir différentes influences culinaires pour créer des plats à travers lesquels il célèbre les saveurs locales. Après le premier restaurant à succès "Chai Maestro" situé dans le quartier de Mériadeck, le chef a continué sa route vers le quartier Saint-Seurin. Notre équipe de serveurs, menée par la dynamique Virgine, s'engage à offrir un service chaleureux et attentif, assurant que chaque visite soit mémorable. Ensemble, nous partageons une passion commune pour la gastronomie et l'accueil, faisant de La Croix Blanche une destination incontournable pour les gourmets et amateurs de bonne cuisine.</p>
             </div>
           </div>
           <div class="swiper-slide">
@@ -56,7 +67,7 @@
               <h3>La Croix Blanche</h3>
             </div>
             <div class="swiper-text">
-              <p>Situé au cœur de Bordeaux au 62 rue de La Croix Blanche, dans le charmant quartier de Saint-Seurin, La Croix Blanche vous invite à découvrir bien plus qu'un simple restaurant : une véritable expérience culinaire où chaque détail compte. C'est un lieu convivial disposant d'une terrasse verdoyante et paisible, aménagée en trois espaces distincts. Vous y trouverez une pergola ombragée idéale pour les journées ensoleillées, une terrasse baignée de lumière et un confortable salon de jardin. À l’intérieur, une ambiance bistrot chic, élégante, sobre et chaleureuse. Le chef, passionné par les saveurs authentiques, puise directement dans la jardinière d'herbes aromatiques pour sublimer ses créations, vous offrant une cuisine fraîche et raffinée.</p>
+              <p>Située au cœur de Bordeaux au 62 rue de La Croix Blanche, dans le charmant quartier de Saint-Seurin, La Croix Blanche vous invite à découvrir bien plus qu'un simple restaurant : une véritable expérience culinaire où chaque détail compte. C'est un lieu convivial disposant d'une terrasse verdoyante et paisible, aménagée en trois espaces distincts. Vous y trouverez une pergola ombragée idéale pour les journées ensoleillées, une terrasse baignée de lumière et un confortable salon de jardin. À l’intérieur, une ambiance bistrot chic, élégante, sobre et chaleureuse. Le chef, passionné par les saveurs authentiques, puise directement dans la jardinière d'herbes aromatiques pour sublimer ses créations, vous offrant une cuisine fraîche et raffinée.</p>
             </div>
           </div>
           <div class="swiper-slide">
@@ -84,7 +95,7 @@
           <h3>Nos produits</h3>
         </div>
         <div class="texte-intro">
-          <p>Nous mettons un point d'honneur à mettre en avant les producteurs avec qui nous travaillons, ils ont tous leur cadre photo dans la salle du restaurant. Travailler des produits locaux d'exception est pour nous très important, c'est pourquoi nous avons des choisi fournisseurs pleins de savoir faire et d'expérience, tous situés dans le Sud-Ouest.</p>
+          <p>Nous mettons un point d'honneur à mettre en avant les producteurs avec qui nous travaillons, ils ont tous leur cadre photo dans la salle du restaurant. Travailler des produits locaux d'exception est pour nous très important, c'est pourquoi nous avons choisi des fournisseurs pleins de savoir faire et d'expérience, tous situés dans le Sud-Ouest.</p>
         </div>
       </div>
       <div class="slideshow-fournisseurs">
@@ -97,7 +108,7 @@
                 </div>
                 <div class="fournisseur-text">
                   <h4>Boucher</h4>
-                  <p>Etablissement Massonière situé à Saint-Denis-de-Pile près de Bordeaux, nous livre toute les semaine des viandes fraîches de bœuf, de veau, d'agneau et de mouton d'origine française.</p>
+                  <p>Établissement Massonière situé à Saint-Denis-de-Pile près de Bordeaux, nous livre toutes les semaines des viandes fraîches de bœuf, de veau, d'agneau et de mouton d'origine française.</p>
                 </div>
               </div>
             </div>
@@ -119,7 +130,7 @@
                 </div>
                 <div class="fournisseur-text">
                   <h4>Poissonnier</h4>
-                  <p>Benoit de chez Top Langouste, société créée en 1981 nous propose toute les semaines une large sélection de poissons, crustacés et mollusques frais et de saison.</p>
+                  <p>Benoît de chez Top Langouste, société créée en 1981 nous propose toutes les semaines une large sélection de poissons, crustacés et mollusques frais et de saison.</p>
                 </div>
               </div>
             </div>
@@ -130,7 +141,7 @@
                 </div>
                 <div class="fournisseur-text">
                   <h4>Volailler</h4>
-                  <p>Jean-Luc de la Ferme Hournadet à Gamarde-Les-Bains dans les Landes. Tous leurs produits sont élaborés à partir de leurs propres volailles que nous nourries avec le maïs cultivé sur l'exploitation. Tous les produits sont issus de leur atelier de production, dans lequel les canards sont gavés à l'ancienne, au maïs grain entier.</p>
+                  <p>Jean-Luc de la Ferme Hournadet à Gamarde-Les-Bains dans les Landes. Leur gamme de produits est fabriquée à partir des volailles qu'ils élèvent et nourrissent avec le maïs cultivé sur l'exploitation. Tous les produits sont issus de leur atelier de production, dans lequel les canards sont gavés à l'ancienne, au maïs grain entier.</p>
                 </div>
               </div>
             </div>
@@ -163,7 +174,7 @@
                 </div>
                 <div class="fournisseur-text">
                   <h4>Boulanger</h4>
-                  <p>Thomas de La Boulange à Lormont a créé son pain Le Barbey, farines et graines qui le composent sont tous issus de l'agriculture locale.</p>
+                  <p>Thomas de La Boulange à Lormont a créé son pain Le Barbey, farines et graines qui le composent sont toutes issues de l'agriculture locale.</p>
                 </div>
               </div>
             </div>
