--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-TG9WXFLQ');</script>
+  <!-- End Google Tag Manager -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contact | Réserver</title>
@@ -16,6 +23,10 @@
   <script src="scripts/form_validation.js"></script>
 </head>
 <body>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TG9WXFLQ"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
   <header class="head-degr-2">
     <div id="navigation"></div>
     <div class="header-container-contact">
@@ -25,7 +36,7 @@
           <h5>Réservez votre table à La Croix Blanche !</h5>
         </div>
         <div class="small-container texte-intro">
-          <p class="white">Offrez-vous une parenthèse gourmande riche en saveurs et en couleurs. Remplissez le formulaire ci-dessous pour soumettre une demande de réservation. Nous reviendrons vers vous dans les plus bref délais afin de vous confirmer votre demande.</p>
+          <p class="white">Offrez-vous une parenthèse gourmande riche en saveurs et en couleurs. Remplissez le formulaire ci-dessous pour soumettre une demande de réservation. Nous reviendrons vers vous dans les plus brefs délais afin de vous confirmer votre demande.</p>
         </div>
       </div>
     </div>
