--- a/footer.html
+++ b/footer.html
@@ -5,7 +5,7 @@
       <ul>
         <li><a href="tel:0556309789">05 56 30 97 89</a></li>
         <li>62 rue de La Croix Blanche, <br>33000 BORDEAUX</li>
-        <li>Du lundi au vendredi <br>12h00 - 14h00 et 19h00 - 22h00</li>
+        <li>Du lundi au samedi <br>12h00 - 14h00 et 19h00 - 22h00</li>
       </ul>
     </div>
     <div class="sous-navigation">
@@ -26,7 +26,7 @@
       </ul>
     </div>
     <div class="mentions-legales">
-      <p>© 2024 La Croix Blanche | <a href="/mentions_legales.html">Mentions légales</a> | <a href="/politique_de_confidentialite.html">Politique de confidentialité</a> | Réalisé par : <a href="https://www.nicolas-monmerque.com/" target="_blank"><span class="dev-nm"></span> nicolas-monmerque.com</a> | Photos : Victor Lemée</p>
+      <p>© 2024 La Croix Blanche | <a href="/mentions_legales.html">Mentions légales</a> | <a href="/politique_de_confidentialite.html">Politique de confidentialité</a> | Réalisé par : <a href="https://www.nicolas-monmerque.com/" target="_blank"><span class="dev-nm"></span> nicolas-monmerque.com</a> | Photos : Victor Lemée
     </div>
   </div>
 </div>
