Sitemap et liens

--- a/footer.html
+++ b/footer.html
@@ -11,10 +11,10 @@
     <div class="sous-navigation">
       <h6>Navigation</h6>
       <ul>
-        <li><a href="index.html">Accueil</a></li>
-        <li><a href="la_carte.html">La Carte</a></li>
-        <li><a href="a_propos.html">À Propos</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="/">Accueil</a></li>
+        <li><a href="/la_carte.html">La Carte</a></li>
+        <li><a href="/a_propos.html">À Propos</a></li>
+        <li><a href="/contact.html">Contact</a></li>
       </ul>
     </div>
     <div class="reseaux-sociaux">
