--- a/nav.html
+++ b/nav.html
@@ -1,14 +1,14 @@
 <div class="nav-container" id="navScroll">
   <nav>
     <div class="logo">
-      <a href="index.html"><img src="images/logo-lcb-nav.svg" alt="La Croix Blanche" width="60"></a>
+      <a href="/"><img src="images/logo-lcb-nav.svg" alt="La Croix Blanche" width="60"></a>
     </div>
     <div id="icon"></div>
     <ul>
-      <li class="nav-accueil"><a href="index.html">Accueil</a></li>
-      <li class="nav-la-carte"><a href="la_carte.html">La carte</a></li>
-      <li class="nav-a-propos"><a href="a_propos.html">À propos</a></li>
-      <li class="nav-contact"><a href="contact.html">Contact</a></li>
+      <li class="nav-accueil"><a href="/">Accueil</a></li>
+      <li class="nav-la-carte"><a href="/la_carte.html">La carte</a></li>
+      <li class="nav-a-propos"><a href="/a_propos.html">À propos</a></li>
+      <li class="nav-contact"><a href="/contact.html">Contact</a></li>
       <li class="nav-telephone"><a href="tel:0556309789">05 56 30 97 89</a></li>
     </ul>
   </nav>
