--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>La Croix Blanche | Restaurant Tradionnel Français | BORDEAUX</title>
   <meta name="description" content="Découvrez La Croix Blanche, restaurant à Bordeaux alliant tradition et modernité. Profitez d'une cuisine française raffinée, d'une ambiance bistrot chic et d'une sélection de vins issus des meilleurs terroirs. Un lieu convivial pour vos moments gourmands." />
+  <link rel="canonical" href="https://www.lacroixblanchebordeaux.com/">
   <link rel="icon" type="image/png" href="/images/icons/favicon-48x48.png" sizes="48x48" />
   <link rel="icon" type="image/svg+xml" href="/images/icons/favicon.svg" />
   <link rel="shortcut icon" href="/images/icons/favicon.ico" />
