--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <link rel="shortcut icon" href="/images/icons/favicon.ico" />
   <link rel="apple-touch-icon" sizes="180x180" href="/images/icons/apple-touch-icon.png" />
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
@@ -27,6 +28,9 @@
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TG9WXFLQ"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
+  <div class="fermeture">
+    <p></i> Le restaurant est fermé pour une durée indéterminée</p>
+  </div>
   <header class="head-degr-home">
     <div id="navigation"></div>
     <div class="header-container-accueil">
