--- a/la_carte.html
+++ b/la_carte.html
@@ -26,6 +26,9 @@
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TG9WXFLQ"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
+  <div class="fermeture">
+    <p></i> Le restaurant est fermé pour une durée indéterminée</p>
+  </div>
   <header class="head-degr-1">
     <div id="navigation"></div>
     <div class="header-container-carte">
