mise ne place de l'encart fermeture indéterminée

--- a/a_propos.html
+++ b/a_propos.html
@@ -29,7 +29,7 @@
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
   <div class="fermeture">
-    <p></i> Le restaurant est fermé pour une durée indéterminée</p>
+    <p></i> Le restaurant est fermé pour une durée indéterminée.</p>
   </div>
   <header class="head-degr-2">
     <div id="navigation"></div>
